# darwin

./: .gitignore  README.md  Untitled.ipynb  analysis_of_measurements.ipynb  cerro-crocker.ipynb  change_gar_names.py  constants.py  darwin.py  domain_tests.ipynb  era5_quick_look.ipynb  et_bil.csv  evapotranspiration.ipynb  flake.nix  hgt_nn.csv  hgt_partner_points.csv  lonlat_grid_desc_domain_s.txt  maps_for_nnn.ipynb  plots_from_products.ipynb  prcp.csv  prcp_bil.csv  prcp_nn.csv  prcp_partner_points.csv  puerto-villamil.ipynb  pyproject.toml  pyrightconfig.json  q2_bil.csv  remap_all.sh  reproject.py  requirements.txt  schemas.ipynb  stations.csv  stations.ipynb  stations_partner_points.csv  t2_bil.csv  test_dio.py  utils.py  wps_namelist_template  ws10_bil.csv  xun_remap.sh
cape/: environment.yml  metadata.py  wrfpost_cape.py
darwin/: accessors.py  annual_prcp_spatial.py  change_gar_names.py  combine_to_measurement_period.py  core.py  create_sh.py  defaults.py  geogrid_simulator.py  get_cds_data.py  logger.py  maps_for_nnn.py  plot_dem_domains.py  plot_net_precipitation.py  plots.py  reproject.py  utils.py
tests/: nino12index.csv  test_dio.py
